--- a/static/css/pages/catalog.css
+++ b/static/css/pages/catalog.css
@@ -1,3 +1,11 @@
+a > h2 {
+    transition: color .2s ease;
+}
+
+a[href]:hover > h2 {
+    color: var(--color-red);
+}
+
 .catalog__block {
     display: flex;
     align-items: flex-start;
